@@ -12,25 +12,21 @@ attribute	total_stmts_duration	0
 attribute	total_stmts_measured	0
 attribute	total_sub_calls	0
 attribute	xs_version	0
-fid_block_time	1	2	[ 0 6 ]
+fid_block_time	1	2	[ 0 9 ]
 fid_block_time	1	7	[ 0 1 ]
 fid_fileinfo	1	[ test80-recurs.p   1 2 0 0 ]
-fid_fileinfo	1	sub	main::CORE:sleep	0-0
 fid_fileinfo	1	sub	main::recurs	1-5
-fid_fileinfo	1	call	3	main::CORE:sleep	[ 2 0 0 0 0 0 0 ]
-fid_fileinfo	1	call	4	main::recurs	[ 1 0 0 0 0 0 1 ]
+fid_fileinfo	1	call	4	main::recurs	[ 2 0 0 0 0 0 2 ]
 fid_fileinfo	1	call	7	main::recurs	[ 1 0 0 0 0 0 0 ]
-fid_line_time	1	2	[ 0 2 ]
-fid_line_time	1	3	[ 0 2 ]
-fid_line_time	1	4	[ 0 2 ]
+fid_line_time	1	2	[ 0 3 ]
+fid_line_time	1	3	[ 0 3 ]
+fid_line_time	1	4	[ 0 3 ]
 fid_line_time	1	7	[ 0 1 ]
-fid_sub_time	1	2	[ 0 6 ]
+fid_sub_time	1	2	[ 0 9 ]
 fid_sub_time	1	7	[ 0 1 ]
 profile_modes	fid_block_time	block
 profile_modes	fid_line_time	line
 profile_modes	fid_sub_time	sub
-sub_subinfo	main::CORE:sleep	[ 1 0 0 2 0 0 0 0 ]
-sub_subinfo	main::CORE:sleep	called_by	1	3	[ 2 0 0 0 0 0 0 ]
-sub_subinfo	main::recurs	[ 1 1 5 2 0 0 1 0 ]
-sub_subinfo	main::recurs	called_by	1	4	[ 1 0 0 0 0 0 1 ]
+sub_subinfo	main::recurs	[ 1 1 5 3 0 0 2 0 ]
+sub_subinfo	main::recurs	called_by	1	4	[ 2 0 0 0 0 0 2 ]
 sub_subinfo	main::recurs	called_by	1	7	[ 1 0 0 0 0 0 0 ]
